# Noteahead

./: .clang-format  .gitignore  Agents.md  CHANGELOG  CLAUDE.md  CMakeLists.txt  GEMINI.md  Jenkinsfile  MyRealName.nahd  README.md  SynthTest.nahd  index.html  io.github.juzzlin.Noteahead.yml  package-lock.json  update_tests.py  validate_nahd.cpp
src/: CMakeLists.txt  Main.qml  Style.cmake  application.cpp  application.hpp  config.cpp  config.hpp  constants.hpp  main.cpp  main.qml  midi_device.hpp  midi_service.cpp  midi_service.hpp  midi_service_rt_midi.cpp  midi_service_rt_midi.hpp  settings.cpp  settings.hpp
src/Ui/: Main.qml
src/application/: CMakeLists.txt  application.cpp  application.hpp  application_service.cpp  application_service.hpp  automation_service.cpp  automation_service.hpp  clock.cpp  clock.hpp  config.cpp  config.hpp  copy_manager.cpp  copy_manager.hpp  editor_service.cpp  editor_service.hpp  instrument_request.cpp  instrument_request.hpp  midi_service.cpp  midi_service.hpp  midi_worker.cpp  midi_worker.hpp  mixer_service.cpp  mixer_service.hpp  note_converter.cpp  note_converter.hpp  player.cpp  player.hpp  player_service.cpp  player_service.hpp  player_worker.cpp  player_worker.hpp  position.cpp  position.hpp  recent_files_manager.cpp  recent_files_manager.hpp  selection_service.cpp  selection_service.hpp  state_machine.cpp  state_machine.hpp  ui_logger.cpp  (+1 more)
src/application/command/: automation_command.cpp  automation_command.hpp  command.hpp  composite_command.cpp  composite_command.hpp  note_edit_command.cpp  note_edit_command.hpp  undo_stack.cpp  undo_stack.hpp
src/application/models/: audio_settings_model.cpp  audio_settings_model.hpp  column_settings_model.cpp  column_settings_model.hpp  editor.cpp  editor.hpp  event_selection_model.cpp  event_selection_model.hpp  instrument_layers_model.cpp  instrument_layers_model.hpp  midi_cc_automations_model.cpp  midi_cc_automations_model.hpp  midi_cc_selection_model.cpp  midi_cc_selection_model.hpp  midi_settings_model.cpp  midi_settings_model.hpp  note_column_line_container_helper.cpp  note_column_line_container_helper.hpp  note_column_model.cpp  note_column_model.hpp  note_column_model_handler.cpp  note_column_model_handler.hpp  pitch_bend_automations_model.cpp  pitch_bend_automations_model.hpp  recent_files_model.cpp  recent_files_model.hpp  track_settings_model.cpp  track_settings_model.hpp
src/application/service/: application_service.cpp  application_service.hpp  audio_service.cpp  audio_service.hpp  audio_worker.cpp  audio_worker.hpp  automation_service.cpp  automation_service.hpp  bass_synth_controller.cpp  bass_synth_controller.hpp  copy_manager.cpp  copy_manager.hpp  device_rack.cpp  device_rack.hpp  device_rack_controller.cpp  device_rack_controller.hpp  device_service.cpp  device_service.hpp  drum_synth_controller.cpp  drum_synth_controller.hpp  editor_service.cpp  editor_service.hpp  editor_state.hpp  effect_rack_controller.cpp  effect_rack_controller.hpp  instrument_layer_service.cpp  instrument_layer_service.hpp  jack_service.cpp  jack_service.hpp  keyboard_service.cpp  keyboard_service.hpp  knob_controller.cpp  knob_controller.hpp  midi_in_worker.cpp  midi_in_worker.hpp  midi_input_worker.cpp  midi_input_worker.hpp  midi_out_worker.cpp  midi_out_worker.hpp  midi_output_worker.cpp  (+43 more)
src/common/: CMakeLists.txt  audio_backend.hpp  constants.cpp  constants.hpp  denormal_protection.hpp  parameter_mapper.cpp  parameter_mapper.hpp  utils.cpp  utils.hpp  waveform_generator.cpp  waveform_generator.hpp
src/common/xml/: project_reader.hpp  project_writer.hpp
src/contrib/Argengine/: Jenkinsfile
src/contrib/SimpleLogger/: Jenkinsfile
src/domain/: CMakeLists.txt  arpeggiator.cpp  automation.cpp  automation.hpp  automation_location.cpp  automation_location.hpp  column.cpp  column.hpp  column_settings.cpp  column_settings.hpp  event.cpp  event.hpp  instrument.cpp  instrument.hpp  instrument_layer.cpp  instrument_layer.hpp  instrument_settings.cpp  instrument_settings.hpp  interpolator.cpp  interpolator.hpp  line.cpp  line.hpp  line_event.cpp  line_event.hpp  midi_address.cpp  midi_address.hpp  midi_cc_automation.cpp  midi_cc_automation.hpp  midi_cc_data.cpp  midi_cc_data.hpp  midi_cc_setting.cpp  midi_cc_setting.hpp  midi_import_mode.hpp  midi_note_data.cpp  midi_note_data.hpp  mixer_unit.cpp  mixer_unit.hpp  note_data.cpp  note_data.hpp  note_data_manipulator.cpp  (+18 more)
src/domain/devices/: CMakeLists.txt  auto_panner_effect.cpp  auto_panner_effect.hpp  bass_synth_device.cpp  bass_synth_device.hpp  delay_effect.cpp  delay_effect.hpp  device.cpp  device.hpp  device_factory.cpp  device_factory.hpp  device_registration.cpp  drum_synth_constants.cpp  drum_synth_constants.hpp  drum_synth_device.cpp  drum_synth_device.hpp  effect.cpp  effect.hpp  effect_factory.cpp  effect_rack.cpp  effect_rack.hpp  high_pass_filter_effect.cpp  high_pass_filter_effect.hpp  low_pass_filter_effect.cpp  low_pass_filter_effect.hpp  panner_effect.cpp  panner_effect.hpp  panning_effect.cpp  panning_effect.hpp  piano_synth_device.cpp  piano_synth_device.hpp  sampler.cpp  sampler.hpp  sampler_device.cpp  sampler_device.hpp  synth_device.cpp  synth_device.hpp  synth_presets.cpp  synth_presets.hpp  volume_effect.cpp  (+3 more)
src/domain/dsp/: CMakeLists.txt  adsr_envelope.cpp  adsr_envelope.hpp  all_pass_chain.cpp  all_pass_chain.hpp  all_pass_filter.cpp  all_pass_filter.hpp  audio_context.hpp  biquad_filter.cpp  biquad_filter.hpp  cascaded_svf.cpp  cascaded_svf.hpp  chorus_effect.cpp  chorus_effect.hpp  clipper_effect.cpp  clipper_effect.hpp  compressor_effect.cpp  compressor_effect.hpp  dbtp_meter.cpp  dbtp_meter.hpp  (+36 more)
src/infra/: CMakeLists.txt  data_service.cpp  data_service.hpp  midi_backend.cpp  midi_backend.hpp  midi_backend_rt_midi.cpp  midi_backend_rt_midi.hpp  midi_cc.cpp  midi_cc.hpp  midi_device.cpp  midi_device.hpp  midi_service.cpp  midi_service.hpp  midi_service_rt_midi.cpp  midi_service_rt_midi.hpp  settings.cpp  settings.hpp  video_generator.cpp  video_generator.hpp
src/unit_tests/: CMakeLists.txt
src/view/: CMakeLists.txt
(+804 files in other folders)
